--- a/application.yaml
+++ b/application.yaml
@@ -8,6 +8,7 @@ spec:
 
   source:
     repoURL: git@github.com:Enstientt/argocd.git
+    targetRevision: main
     path: dev
   destination: 
     server: https://kubernetes.default.svc
