--- a/application.yaml
+++ b/application.yaml
@@ -5,11 +5,13 @@ metadata:
   namespace: argocd
 spec:
   project: default
-
   source:
     repoURL: git@github.com:Enstientt/argocd.git
     targetRevision: main
     path: dev
+    env:
+      - name: SSH_AUTH_SOCK
+        value: /tmp/ssh-SQl2WU4ZexLb/agent.1345
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
